tests/out/error/loop/label_not_exists.out
tests/out/error/loop/label_not_exists.in.bt:2:1 error: label "my_label" not found
